# Badger-MU

./: .gitignore  .lando.yml  CODE_OF_CONDUCT.md  README.md  docker-compose.yml  index.d.ts  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json
.next/: trace
.next/cache/: config.json
.next/server/: server-reference-manifest.json
mail-service/: docker-compose.yml  main.py  requirements.txt  worker.py
migration/: README.md
migration/backend/: .env.example  BADGE_ISSUANCE_PLAN.md  notes.md  private_key.pem  public_key.pem  requirements.txt  test.ipynb
migration/backend/rust_extension/: Cargo.toml  pyproject.toml
migration/backend/rust_extension/src/: baking.rs  error.rs  extraction.rs  lib.rs
migration/docker/: Dockerfile.backend  Dockerfile.celery  Dockerfile.frontend  docker-compose.yml  nginx.conf
migration/docs/: IMPLEMENTATION_SUMMARY.md  OPEN_BADGES_API_REVIEW.md  README.md  README_MIGRATION.md  README_MIGRATION_COMPLETE.md  api_documentation.md  deployment.md  migration_plan.md  step_1_database_schema.md  troubleshooting.md
old_code/: .env.example  .eslintrc.cjs  .lando.local.example.yml  .lando.yml  CONTRIBUTING.md  Dockerfile  LICENSE  jest.config.ts  postcss.config.cjs  tailwind.config.ts
old_code/__mocks__/: add-credential-status.test.ts  empty.js
old_code/src/: env.mjs  modules.d.ts  util.ts
old_code/terraform/: README.md  locals.tf  main.tf  outputs.tf  variables.tf
prisma/schema/: _base.prisma  extensions.prisma  identifier.prisma  (+2 more)
src/: env.mjs
style-dictionary/: config.json
terraform/: .gitignore  providers.tf
(+216 files in other folders)
