[package]
name = "badge_baking"
version = "1.0.0"
edition = "2021"

[lib]
name = "badge_baking"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.20", features = ["extension-module"] }
png = "0.17"
base64 = "0.21"
serde_json = "1.0"
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

