[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"

[project]
name = "badge_baking"
version = "1.0.0"
description = "Rust-accelerated badge baking for Open Badge v3.0"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3.11",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "badge_baking"
python-source = "python"

